--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "skipLibCheck": false,
   },
   "include": [
     "src"
-  ]
+  ],
+  "exclude": [
+      "node_modules"
+  ],
+  "types": ["react", "jest"],
 }
